WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293542
[content-visibility] ASSERT in LayoutIntegration::LineLayout::hitTest
https://bugs.webkit.org/show_bug.cgi?id=293542
Summary
[content-visibility] ASSERT in LayoutIntegration::LineLayout::hitTest
alan
Reported
2025-05-24 15:41:40 PDT
<
rdar://151305707
>
Attachments
Patch
(2.73 KB, patch)
2025-05-24 15:52 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(2.73 KB, patch)
2025-05-26 09:01 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(2.71 KB, patch)
2025-05-26 19:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-05-24 15:52:54 PDT
Created
attachment 475368
[details]
Patch
alan
Comment 2
2025-05-26 09:01:47 PDT
Created
attachment 475376
[details]
Patch
alan
Comment 3
2025-05-26 19:38:41 PDT
Created
attachment 475379
[details]
[fast-cq]Patch
EWS
Comment 4
2025-05-27 05:20:46 PDT
Committed
295438@main
(e0f3ed68961c): <
https://commits.webkit.org/295438@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 475379
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug