[content-visibility] ASSERT in LayoutIntegration::LineLayout::hitTest https://bugs.webkit.org/show_bug.cgi?id=293542 <rdar://151305707>

Reviewed by Antti Koivisto.

This is equivalent to what we do in RenderBlock::nodeAtPoint to avoid hittesting skipped subtree. (This is the RenderLayer variant of "we are at the skipped root and should not
descend into our skipped subtree by visiting child layers.)

* LayoutTests/fast/multicol/cv-with-colum-and-hittest-assert-expected.txt: Added.
* LayoutTests/fast/multicol/cv-with-colum-and-hittest-assert.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::hitTestList):

Canonical link: https://commits.webkit.org/295438@main